--- a/css/giftCard.css
+++ b/css/giftCard.css
@@ -138,10 +138,11 @@
  .radio{
      width: 25px;
      height: 25px;
+     /*position: inherit;*/
  }
 
 .radio:not(checked) {
-    position: absolute;
+    /*position: absolute;*/
     opacity: 0;
     z-index:1
 }
@@ -156,36 +157,29 @@
 .radio:not(checked)+ label:before {
     content: '';
     position: absolute;
-    top: -3px;
-    left: 0;
     width: 22px;
     height: 22px;
     border: 1px solid #A39284;
     border-radius: 50%;
     background: #FFF;
+    z-index: 3;
 }
 
-.radio:not(checked) + label:after {
+.radio:checked + label:after {
     content: '';
     position: absolute;
-    top: 1px;
-    left: 4px;
-    width: 6px;
-    height: 6px;
+    border: 0.5px solid #A39284;
+    top: 5px;
+    left: 5px;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
-    background: #3498DB;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.5);
-    opacity: 0;
+    background-color: #3498DB;
+    opacity: 1;
     transition: all .2s;
+    z-index: 3;
 }
-
-.radio:checked + label:before {
-    background: #3498DB;}
-
-/*.radio:checked + label:after {*/
-    /*left: 26px;*/
-/*}*/
 /* Показываем получение фокуса. */
 .radio:focus + label:before {
-    box-shadow: 0 0 0 1px #CDD1DA; /*rgba(255,255,0,.5);*/
+    box-shadow: 0 0 0 1px #CDD1DA;
 }
