--- a/css/giftCard.css
+++ b/css/giftCard.css
@@ -28,18 +28,6 @@
          url(../fonts/SplentoFont.svg#SplentoFont) format('svg');
 }
 
-.text-bold {
-    font-weight: bold;
-}
-
-.text-center{
-    text-align: center;
-}
-
-.open-sans {
-    font-family: "Open Sans";
-}
-
 .open-sans-light{
     font-family: "Open Sans Light";
 }
@@ -52,41 +40,39 @@
     font-family: "Splento";
     font-size: 70px;
     color: #00BBC9;
+    margin-top:4em;
+    margin-bottom: -0.4em;
 }
 
-.font-size-12{
+.open-sans12{
+    font-family: "Open Sans Light";
     font-size: 12px;
+    margin-left: 30px;
 }
 
-.font-size-26{
-     font-size: 26px;
- }
+.open-sans15{
+    font-family: "Open Sans Light";
+    font-size: 15px;
+    margin: 0;
+}
 
-.font-size-35{
+.open-sans35{
+    font-family: "Open Sans Light";
     font-size: 35px;
 }
 
-.font-size-20{
+.open-sans-bold20{
+    font-family: "Open Sans Bold";
     font-size: 20px;
+    margin-left: -10px;
 }
 
 .font-size-15{
     font-size: 15px;
 }
 
-.padding0 {
-    padding: 0!important;
-}
-
-.margin0 {
-    margin: 0!important;
-}
-
-.btn-custom {
-    font-size: 21px;
-    font-family: "Open Sans SemiBold";
-    color: #3498DB;
-    padding: 16px 16px 16px 16px!important;
+.text-center{
+    text-align: center;
 }
 
 .center {
@@ -94,14 +80,51 @@
     margin: 0 auto;
 }
 
-/*.col-centered {*/
-    /*display:inline-block;*/
-    /*float:none;*/
-    /*!* reset the text-align *!*/
-    /*text-align:left;*/
-    /*!* inline-block space fix *!*/
-    /*margin-right:-4px;*/
-/*}*/
+.padding0 {
+    padding: 0;
+}
+
+.margin0 {
+    margin: 0;
+}
+
+.row{
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
+.btn-custom {
+    font-size: 21px;
+    font-family: "Open Sans SemiBold";
+    background-color: #3498DB ;
+    padding: 16px 16px 16px 16px!important;
+}
+
+.background-img{
+    position: absolute;
+    margin-top: 1em
+}
+
+.position-to-img{
+    position: relative;
+}
+
+.rate-img{
+    width: 80%;
+}
+
+.space26{
+    padding: 26.3px;
+}
+
+.space9{
+    padding: 9px;
+}
+
+.radio-centred{
+    display: table;
+    margin: 0 auto;
+}
 
 .padding-left-right-35 {
     padding: 0 35px 0 35px;
@@ -111,15 +134,16 @@
     margin-top: 2em;
 }
 
+.margintop1em {
+    margin-top: 1em;
+}
+
 .background-img {
     background: url(../img/background_gift_card.png) center;
     background-size: auto 100%;
     background-repeat: no-repeat;
 }
 
-/*.form-position{*/
-    /*margin-top: 20.5em*/
-/*}*/
 .purple-point{
     /*color: #8A74B9;*/
     list-style-image: url(../img/purple_point.png);
@@ -135,51 +159,31 @@
      list-style-image: url(../img/blue_point.png);
 }
 
- .radio{
-     width: 25px;
-     height: 25px;
-     /*position: inherit;*/
- }
-
-.radio:not(checked) {
-    /*position: absolute;*/
-    opacity: 0;
-    z-index:1
+.dotted{
+    border:0;
+    border-bottom: 2px dotted;
 }
 
-.radio:not(checked) + label {
-    position: relative; }/* будем позиционировать псевдочекбокс относительно label */
+@media only screen and (max-device-width: 1024px){
+    .splento-font{
+        margin-top: 0;
+    }
+    .background-img{
+        display: none;
+    }
+    .open-sans12{
+        margin-left: 0;
+    }
+@media screen and (orientation: landscape) {
+    .rate-img{
+        width: 100%;
+    }
 
-.radio + label {
-    cursor: pointer;
+
 }
 
-.radio:not(checked)+ label:before {
-    content: '';
-    position: absolute;
-    width: 22px;
-    height: 22px;
-    border: 1px solid #A39284;
-    border-radius: 50%;
-    background: #FFF;
-    z-index: 3;
 }
 
-.radio:checked + label:after {
-    content: '';
-    position: absolute;
-    border: 0.5px solid #A39284;
-    top: 5px;
-    left: 5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #3498DB;
-    opacity: 1;
-    transition: all .2s;
-    z-index: 3;
-}
-/* Показываем получение фокуса. */
-.radio:focus + label:before {
-    box-shadow: 0 0 0 1px #CDD1DA;
-}
+
+
+
