--- a/css/giftCard.css
+++ b/css/giftCard.css
@@ -67,6 +67,12 @@
     margin-left: -10px;
 }
 
+.myrad-pro{
+    font-family: "Myriad Pro";
+    font-size: 14px;
+    color: #00BBC9;
+}
+
 .font-size-15{
     font-size: 15px;
 }
@@ -98,11 +104,6 @@
     font-family: "Open Sans SemiBold";
     background-color: #3498DB ;
     padding: 16px 16px 16px 16px!important;
-}
-
-.background-img{
-    position: absolute;
-    margin-top: 1em
 }
 
 .position-to-img{
@@ -139,8 +140,14 @@
 }
 
 .background-img {
-    background: url(../img/background_gift_card.png) center;
     background-size: auto 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    margin-top: 1em
+}
+
+.gift-card-img{
+    background-size: auto 60%;
     background-repeat: no-repeat;
 }
 
@@ -161,8 +168,40 @@
 
 .dotted{
     border:0;
-    border-bottom: 2px dotted;
+    border-bottom: 1px dotted;
+    margin-left: 15px;
+    width: 90%;
 }
+
+.dotted-gradient {
+    border:0;
+    line-height: 50px;
+    background-image: linear-gradient(to right, #333 40%, rgba(255, 255, 255, 0) 20%);
+    background-position: bottom;
+    background-size: 3px 1px;
+    background-repeat: repeat-x;
+    width: 90%;
+}
+.rows-border-bottom{
+    line-height: 50px;
+    border: 0;
+    background-image:
+            -webkit-linear-gradient(right, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 51%,rgba(255,255,255,0) 100%),
+            -webkit-linear-gradient(bottom, rgba(128,128,128,1) 0%, rgba(128,128,128,0) 4%, rgba(128,128,128,0) 100%);
+    -webkit-background-size: 3px 50px;
+    -moz-background-size: 3px 50px;
+    -ms-background-size: 3px 50px;
+    -o-background-size: 3px 50px;
+    background-size: 3px 50px;
+    background-repeat: repeat;}
+
+input:focus, textarea:focus{
+    outline: none;
+}
+
+/*textarea:focus{*/
+    /*outline: none;*/
+/*}*/
 
 @media only screen and (max-device-width: 1024px){
     .splento-font{
