--- a/css/giftCard.css
+++ b/css/giftCard.css
@@ -86,14 +86,6 @@
     margin: 0 auto;
 }
 
-.padding0 {
-    padding: 0;
-}
-
-.margin0 {
-    margin: 0;
-}
-
 .row{
     margin-left: 0px;
     margin-right: 0px;
@@ -106,12 +98,22 @@
     padding: 16px 16px 16px 16px!important;
 }
 
-.position-to-img{
+.position-absolute{
+    position: absolute;
+    width: 100%
+}
+
+.position-relative{
     position: relative;
 }
 
 .rate-img{
     width: 80%;
+}
+
+.radio-centred{
+    display: table;
+    margin: 0 auto;
 }
 
 .space26{
@@ -122,21 +124,44 @@
     padding: 9px;
 }
 
-.radio-centred{
-    display: table;
-    margin: 0 auto;
+.padding0 {
+    padding: 0;
 }
 
 .padding-left-right-35 {
     padding: 0 35px 0 35px;
 }
 
-.margintop2em {
+.margin0 {
+    margin: 0;
+}
+
+.margin-top1em {
+    margin-top: 1em;
+}
+
+.margin-top2em {
     margin-top: 2em;
 }
 
-.margintop1em {
-    margin-top: 1em;
+.margin-top4em {
+    margin-top: 4em;
+}
+
+.margin-top12em {
+    margin-top: 12em;
+}
+
+.margin-top14em {
+    margin-top: 14em
+}
+
+.margin-left10{
+    margin-left: 10px;
+}
+
+.margin-top20px{
+    margin-top: 20px;
 }
 
 .background-img {
@@ -170,10 +195,9 @@
     border:0;
     border-bottom: 1px dotted;
     margin-left: 15px;
-    width: 90%;
 }
 
-.dotted-gradient {
+.dotted {
     border:0;
     line-height: 50px;
     background-image: linear-gradient(to right, #333 40%, rgba(255, 255, 255, 0) 20%);
@@ -182,9 +206,12 @@
     background-repeat: repeat-x;
     width: 90%;
 }
+
 .rows-border-bottom{
     line-height: 50px;
-    border: 0;
+    border: none;
+    overflow: auto;
+    outline: none;
     background-image:
             -webkit-linear-gradient(right, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 51%,rgba(255,255,255,0) 100%),
             -webkit-linear-gradient(bottom, rgba(128,128,128,1) 0%, rgba(128,128,128,0) 4%, rgba(128,128,128,0) 100%);
@@ -199,29 +226,80 @@ input:focus, textarea:focus{
     outline: none;
 }
 
-/*textarea:focus{*/
-    /*outline: none;*/
-/*}*/
+@media only screen and (max-device-width: 1450px)  {
+    .splento-font{
+        font-size: 60px;
+    }
+}
+
+@media only screen and (max-device-width: 1086px)  {
+    /*.margin-top12em {*/
+        /*margin-top: 9em;*/
+    /*}*/
+    /*.margin-top14em {*/
+        /*margin-top: 12em;*/
+    /*}*/
+    /*.margin-top4em {*/
+        /*margin-top: 1em;*/
+    /*}*/
+}
 
 @media only screen and (max-device-width: 1024px){
-    .splento-font{
-        margin-top: 0;
-    }
     .background-img{
         display: none;
     }
     .open-sans12{
         margin-left: 0;
     }
+    .margin-top12em {
+        margin-top: 8em;
+    }
+    .margin-top14em {
+        margin-top: 11em;
+    }
+    .margin-top4em {
+        margin-top: 1em;
+    }
+}
+
+@media only screen and (max-device-width: 835px)  {
+    .splento-font{
+        font-size: 50px;
+    }
+}
+
 @media screen and (orientation: landscape) {
     .rate-img{
         width: 100%;
     }
-
-
 }
 
+@media screen and (orientation: portrait) {
+    .margin-top12em {
+        margin-top: 7em;
+    }
+    .margin-top14em {
+        margin-top: 10em;
+    }
+    .margin-top4em {
+        margin-top: 1em;
+    }
 }
+
+@media only screen and (max-device-width: 767px)  {
+    .mobile-width{
+        width: 100%;
+    }
+    .margin-top12em {
+        margin-top: 20px;
+    }
+    .margin-top14em {
+        margin-top: 20px;
+    }
+}
+
+
+
 
 
 
