--- a/css/giftCard.css
+++ b/css/giftCard.css
@@ -40,7 +40,6 @@
     font-family: "Splento";
     font-size: 70px;
     color: #00BBC9;
-    margin-top:4em;
     margin-bottom: -0.4em;
 }
 
@@ -65,6 +64,7 @@
     font-family: "Open Sans Bold";
     font-size: 20px;
     margin-left: -10px;
+    margin-top: -10px;
 }
 
 .myrad-pro{
@@ -128,6 +128,10 @@
     padding: 0;
 }
 
+.padding10{
+    padding: 10px;
+}
+
 .padding-left-right-35 {
     padding: 0 35px 0 35px;
 }
@@ -154,6 +158,10 @@
 
 .margin-top14em {
     margin-top: 14em
+}
+
+.margin-top-15px{
+    margin-top: -15px;
 }
 
 .margin-left10{
@@ -226,6 +234,7 @@ input:focus, textarea:focus{
     outline: none;
 }
 
+
 @media only screen and (max-device-width: 1450px)  {
     .splento-font{
         font-size: 60px;
@@ -250,15 +259,20 @@ input:focus, textarea:focus{
     }
 }
 
-@media only screen and (max-device-width: 835px)  {
-    .splento-font{
-        font-size: 50px;
+@media screen and (max-device-width: 991px){
+    .open-sans12{
+        font-size: 14px;
+        margin: 0 auto;
+        display: table;
+    }
+    .rate-img{
+        width: initial;
     }
 }
 
-@media screen and (orientation: landscape) {
-    .rate-img{
-        width: 100%;
+@media only screen and (max-device-width: 835px)  {
+    .splento-font{
+        font-size: 50px;
     }
 }
 
